@@ -1,7 +1,5 @@
 Return-Path: <brian.stafford@ukonline.co.uk>
-Subject: LibESMTP test mail
 MIME-Version: 1.0
-Message-Id: <xyzzy@plugh.org>
 Content-Type: text/plain;
   charset=iso-8859-1
 Content-Transfer-Encoding: 7bit
