@@ -1,3 +1,8 @@
+      * headers.c
+	Fixed bug where To, Cc, Bcc etc. accepted only single values instead
+	of a list.
+	The comparison on the return value of gettimeofday() was reversed.
+
 2005-12-16 Stable Version 1.0.4 released
 ----------------------------------------
 2005-12-16 	Brian Stafford	<brian@stafford.uklinux.net>
